--- a/src/lib/styles/styles.scss
+++ b/src/lib/styles/styles.scss
@@ -11,6 +11,7 @@ html {
 .home-section {
   width: 100%;
   height: 100vh;
+  max-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
